jcio/templates/service.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: v1
kind: Service
metadata:
  name: jcio-frontend
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector: #@ labels("www","frontend")
---
apiVersion: v1
kind: Service
metadata:
  name: moviedb-frontend
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 3007
    targetPort: 3007
  selector: #@ labels("moviedb","frontend")
---
apiVersion: v1
kind: Service
metadata:
  name: moviedb-backend
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 4007
    targetPort: 4007
  selector: #@ labels("moviedb","backend")
